# src/dtos/model/ingredient-new.ts
@@ -1,0 +1,17 @@
+/**
+ * Recipe
+ * Recipe management API.
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: kitchen@marmicode.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface IngredientNew { 
+    name: string;
+}
+
