# src/recipes.openapi.yaml
@@ -62,7 +62,7 @@ paths:
                             type: string
                         - type: array
                           items:
-                            $ref: '#/components/schemas/IngredientRequest'
+                            $ref: '#/components/schemas/IngredientNew'
       tags:
         - Recipe
     get:
@@ -172,7 +172,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/IngredientRequest'
+              $ref: '#/components/schemas/IngredientNew'
       tags:
         - Recipe
         - Ingredient
@@ -254,10 +254,12 @@ components:
               example: salt
           required:
             - id
-        - $ref: '#/components/schemas/IngredientRequest'
-    IngredientRequest:
-      title: IngredientRequest
+        - $ref: '#/components/schemas/IngredientNew'
+    IngredientNew:
+      title: IngredientNew
       type: object
+      required:
+        - name
       properties:
         name:
           type: string
